generate http-loading-indicator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
+    "paths": {
+      "http-loading-indicator": [
+        "dist/http-loading-indicator"
+      ]
+    },
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
