--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,39 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "http-loading-indicator": {
+      "projectType": "library",
+      "root": "projects/http-loading-indicator",
+      "sourceRoot": "projects/http-loading-indicator/src",
+      "prefix": "pra",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/http-loading-indicator/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/http-loading-indicator/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/http-loading-indicator/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/http-loading-indicator/src/test.ts",
+            "tsConfig": "projects/http-loading-indicator/tsconfig.spec.json",
+            "karmaConfig": "projects/http-loading-indicator/karma.conf.js"
+          }
+        }
+      }
+    }
+  },
+  "cli": {
+    "analytics": false
   }
 }
