--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "ng-packagr": "^15.0.1",
+    "npm-run-all": "^4.1.5",
     "typescript": "~4.8.4"
   }
 }
