Create local-storage sample

--- a/angular.json
+++ b/angular.json
@@ -171,6 +171,125 @@
           }
         }
       }
+    },
+    "local-storage-sample": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss",
+          "skipTests": true
+        },
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
+        "@schematics/angular:interceptor": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:resolver": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        }
+      },
+      "root": "samples/local-storage",
+      "sourceRoot": "samples/local-storage/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/local-storage-sample",
+            "index": "samples/local-storage/src/index.html",
+            "main": "samples/local-storage/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "samples/local-storage/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "samples/local-storage/src/favicon.ico",
+              "samples/local-storage/src/assets"
+            ],
+            "styles": [
+              "samples/local-storage/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "local-storage-sample:build:production"
+            },
+            "development": {
+              "browserTarget": "local-storage-sample:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "local-storage-sample:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "samples/local-storage/tsconfig.spec.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "samples/local-storage/src/favicon.ico",
+              "samples/local-storage/src/assets"
+            ],
+            "styles": [
+              "samples/local-storage/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        }
+      }
     }
   },
   "cli": {
