Update npm scripts

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:http-loading-indicator": "ng serve http-loading-indicator-sample",
-    "prestart:http-loading-indicator": "ng build http-loading-indicator",
+    "start:http-loading-indicator": "run-s start:http-loading-indicator:*",
+    "start:http-loading-indicator:build": "ng build http-loading-indicator --configuration development",
+    "start:http-loading-indicator:serve": "ng serve http-loading-indicator-sample",
+    "start:local-storage": "run-s start:local-storage:*",
+    "start:local-storage:build": "ng build local-storage --configuration development",
+    "start:local-storage:serve": "ng serve local-storage-sample",
     "build:http-loading-indicator": "ng build http-loading-indicator",
     "build:local-storage": "ng build local-storage",
     "build": "run-p build:*",
