--- a/package.json
+++ b/package.json
@@ -19,19 +19,6 @@
     "test": "ng test"
   },
   "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.0.2",
-    "@angular/common": "^15.0.2",
-    "@angular/compiler": "^15.0.2",
-    "@angular/core": "^15.0.2",
-    "@angular/forms": "^15.0.2",
-    "@angular/platform-browser": "^15.0.2",
-    "@angular/platform-browser-dynamic": "^15.0.2",
-    "@angular/router": "^15.0.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.2",
     "@angular/cli": "~15.0.2",
@@ -46,6 +33,17 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "ng-packagr": "^15.0.1",
     "npm-run-all": "^4.1.5",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "@angular/animations": "^15.0.2",
+    "@angular/common": "^15.0.2",
+    "@angular/compiler": "^15.0.2",
+    "@angular/core": "^15.0.2",
+    "@angular/forms": "^15.0.2",
+    "@angular/platform-browser": "^15.0.2",
+    "@angular/platform-browser-dynamic": "^15.0.2",
+    "@angular/router": "^15.0.2",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   }
 }
