--- a/projects/http-loading-indicator/package.json
+++ b/projects/http-loading-indicator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@practical-angular/http-loading-indicator",
-  "version": "15.0.2-alpha.1",
+  "version": "15.0.2",
   "keywords": [
     "angular"
   ],
