--- a/projects/local-storage/package.json
+++ b/projects/local-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@practical-angular/local-storage",
-  "version": "15.0.2-alpha.2",
+  "version": "15.0.2",
   "keywords": [
     "angular"
   ],
