--- a/projects/local-storage/package.json
+++ b/projects/local-storage/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sengokyu/practical-angular"
+    "url": "git+https://github.com/sengokyu/practical-angular.git"
   },
   "peerDependencies": {
     "@angular/common": "^15.0.0",
